see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Jan-2010 Mark Dexter
^ More sample data changes (Elin Waring)

13-Jan-2010 Hannes Papenberg
# Fixed JFormFieldUsergroup - Thanks Christopher Demko!
^ Using PHPs built in SimpleXML instead of JSimpleXML to read XML files. Exception: JParameter. - Thanks Nikolai (elkuku)!

12-Jan-2010 Mark Dexter
# Improvements to contact parameters (Elin Waring)
# Fixes in weblinks router (Elin Waring)
# Newsfeed parameters fixes (Andrea Tarr)
# Banners module parameter fixes (Andrea Tarr)
# Newsfeed layout fixes (Angie Radtke)
^ Working commit of new sample data (Elin Waring)
# Frontpage layout fixes (Angie Radtke)
# Bug fix in contact alias field
# Fix bug when there is no active menu during drill down

12-Jan-2010 Mark Dexter
# Fix bug creating new article category (Christophe Demko)

12-Jan-2010 Hannes Papenberg
^ changed JLanguage to use parse_ini_file() to handle translations - big performance improvement!
^ changed all language files to adhere to the standards required by parse_ini_file() - the files still need to be changed to the new language strings!
^ changed language strings in the code to adhere to the strings required by parse_ini_file()
# fixed XML file of mod_banners
+ Added missing JForm Fields present in JParameter - thank you Christopher Demko!
# Fixed JParameter Element named incorrectly - thank you Christopher Demko!
+ Added Javascript onchange option in JForm - thank you Christopher Demko!
# Fixed JForm Fields to act like the old JParameter Elements  - thank you Christopher Demko!

11-Jan-2010 Hannes Papenberg
- Removed obsolete #__core_log_items table