@@ -27,12 +27,16 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Jan-2010 Mark Dexter
+^ Add language field to category, contact, article, module, newsfeed, weblink (Jean-Marie Simonet)
+^ Fix sample data article (Elin Waring)
+
 13-Jan-2010 Mark Dexter
 ^ More sample data changes (Elin Waring)
 
 13-Jan-2010 Hannes Papenberg
 # Fixed JFormFieldUsergroup - Thanks Christopher Demko!
-^ Using PHPs built in SimpleXML instead of JSimpleXML to read XML files. Exception: JParameter. - Thanks Nikolai (elkuku)!
+^ Using PHPs built in SimpleXML instead of JSimpleXML to read XML files. Exception: JParameter. - Thanks Nikolai (elkuku)! 
 
 12-Jan-2010 Mark Dexter
 # Improvements to contact parameters (Elin Waring)
